Fix background on mobile 2nd times

--- a/public/stylesheets/master.css
+++ b/public/stylesheets/master.css
@@ -14,6 +14,10 @@ body {
   /*background-color: #FFF;*/
   background: url('/images/forWelcome/cloud.jpeg') no-repeat center center fixed;
   background-size: 100% 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   min-width: 100%;
   min-height: 100%;
 }
